crates/parse/src/snapshots/parse__tests__parse_inline_err@0015_field_update.tip.snap
---
source: crates/parse/src/tests.rs
description: "x.y = 1;\n"
input_file: crates/parse/test_data/parse/inline/ok/stm/0015_field_update.tip
---
FieldUpdate(Id("x"), Id("y"), Int(1))
