crates/parse/src/snapshots/parse__tests__parse_inline_ok@0001_record.tip.snap
---
source: crates/parse/src/tests.rs
description: "{ x: 1, y: 2 }\n"
input_file: crates/parse/test_data/parse/inline/ok/exp/0001_record.tip
---
Record(Record(
  fields: [
    Field(
      name: Id("x"),
      value: ExpId(0),
    ),
    Field(
      name: Id("y"),
      value: ExpId(1),
    ),
  ],
))
