crates/parse/src/snapshots/parse__tests__parse_inline_ok@0002_record_nested.tip.snap
---
source: crates/parse/src/tests.rs
description: "{ x: { y: 1, z: 2 }, y: 2 }\n"
input_file: crates/parse/test_data/parse/inline/ok/exp/0002_record_nested.tip
---
Record(Record(
  fields: [
    Field(
      name: Id("x"),
      value: ExpId(2),
    ),
    Field(
      name: Id("y"),
      value: ExpId(3),
    ),
  ],
))
