crates/parse/src/snapshots/parse__tests__parse_inline_ok@0004_ref_exp.tip.snap
---
source: crates/parse/src/tests.rs
description: "&x\n"
input_file: crates/parse/test_data/parse/inline/ok/exp/0004_ref_exp.tip
---
Ref(Id("x"))
