crates/parse/src/snapshots/parse__tests__parse_inline_ok@0005_deref_exp.tip.snap
---
source: crates/parse/src/tests.rs
description: "*x\n"
input_file: crates/parse/test_data/parse/inline/ok/exp/0005_deref_exp.tip
---
Deref(Id(Id("x")))
