crates/parse/src/snapshots/parse__tests__parse_inline_ok@0006_alloc_exp.tip.snap
---
source: crates/parse/src/tests.rs
description: "alloc x\n"
input_file: crates/parse/test_data/parse/inline/ok/exp/0006_alloc_exp.tip
---
Alloc(Id(Id("x")))
