crates/parse/src/snapshots/parse__tests__parse_inline_ok@0008_int_exp.tip.snap
---
source: crates/parse/src/tests.rs
description: "1\n"
input_file: crates/parse/test_data/parse/inline/ok/exp/0008_int_exp.tip
---
Int(1)
