crates/parse/src/snapshots/parse__tests__parse_inline_ok@0009_prefix_exp.tip.snap
---
source: crates/parse/src/tests.rs
description: "*&x + *alloc x\n"
input_file: crates/parse/test_data/parse/inline/ok/exp/0009_prefix_exp.tip
---
BinOp(Deref(Ref(Id("x"))), Add, Deref(Alloc(Id(Id("x")))))
