crates/parse/src/snapshots/parse__tests__parse_inline_ok@0010_field_access.tip.snap
---
source: crates/parse/src/tests.rs
description: "x.y\n"
input_file: crates/parse/test_data/parse/inline/ok/exp/0010_field_access.tip
---
FieldAccess(Id(Id("x")), Id("y"))
