crates/parse/src/snapshots/parse__tests__parse_inline_ok@0013_bin_op_exp.tip.snap
---
source: crates/parse/src/tests.rs
description: "1 * 2 + 3 / 4 - 5 == 6\n"
input_file: crates/parse/test_data/parse/inline/ok/exp/0013_bin_op_exp.tip
---
BinOp(BinOp(BinOp(BinOp(Int(1), Mul, Int(2)), Add, BinOp(Int(3), Div, Int(4))), Sub, Int(5)), Eq, Int(6))
